# docstring-checker

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
src/docstring_checker/: main.py
src/docstring_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_checker.py
